--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>하이트진로</title>
+    <title>HITEJINRO</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,6 +36,18 @@
                 });
             }
             );
+        });
+        $(document).ready(function(){
+           //gnb의 li를 click하면 실행하시오
+           $("header .wrap nav div.lan").hide();
+           $("header .wrap nav ul.enb li:nth-of-type(4)").mouseenter(function(){ //mouseenter 대상영역안으로 마우스가 진입하는 행위
+                $("header .wrap nav div.lan").show();    //slideDown() 펼쳐지면서 보여지게 해라 
+           });
+           //타이틀영역에 마우스엔터하면 실행하시오
+           $("header .wrap nav ul.enb li:nth-of-type(4)").mouseout(function(){
+                $("header .wrap nav div.lan").hide();
+           });
+
         });
     </script> 
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
@@ -87,9 +101,9 @@
                 </ul>
                 <div class="lan hide">
                     <ul>
-                        <li>eng</li>
-                        <li>jan</li>
-                        <li>chi</li>
+                        <li>ENG</li>
+                        <li>JAN</li>
+                        <li>CHI</li>
                     </ul>
                 </div>
                 <div class="wgnb hide">
