--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         });
         $(document).ready(function(){
            //gnb의 li를 click하면 실행하시오
+           $(".ham").hide();
            $("header .wrap nav div.lan").hide();
            $("header .wrap nav ul.enb li:nth-of-type(4)").mouseenter(function(){ //mouseenter 대상영역안으로 마우스가 진입하는 행위
                 $("header .wrap nav div.lan").show();    //slideDown() 펼쳐지면서 보여지게 해라 
@@ -77,6 +78,38 @@
 
             });
         });
+        // 슬라이드 업 다운//
+        $(document).ready(function(){
+            $("div.wgnb").hide(); 
+           $("header .wrap nav ul.gnb li:nth-of-type(1)").mouseenter(function(){ //mouseenter 대상영역안으로 마우스가 진입하는 행위
+                $("div.wbox div.wgnb:nth-of-type(1)").slideDown();    //slideDown() 펼쳐지면서 보여지게 해라 
+                $("div.wbox div.wgnb:nth-of-type(1)").siblings().hide();
+           });
+           $("div#subtitle").mouseenter(function(){
+                $("div.wbox div.wgnb:nth-of-type(1)").slideUp();
+           });
+           $("header .wrap nav ul.gnb li:nth-of-type(2)").mouseenter(function(){ //mouseenter 대상영역안으로 마우스가 진입하는 행위
+                $("div.wbox div.wgnb:nth-of-type(2)").slideDown();    //slideDown() 펼쳐지면서 보여지게 해라 
+                $("div.wbox div.wgnb:nth-of-type(2)").siblings().hide();
+           });
+           $("div#subtitle").mouseenter(function(){
+                $("div.wbox div.wgnb:nth-of-type(2)").slideUp();
+           });
+           $("header .wrap nav ul.gnb li:nth-of-type(3)").mouseenter(function(){ //mouseenter 대상영역안으로 마우스가 진입하는 행위
+                $("div.wbox div.wgnb:nth-of-type(3)").slideDown();    //slideDown() 펼쳐지면서 보여지게 해라 
+                $("div.wbox div.wgnb:nth-of-type(3)").siblings().hide();
+           });
+           $("div#subtitle").mouseenter(function(){
+                $("div.wbox div.wgnb:nth-of-type(3)").slideUp();
+           });
+           $("header .wrap nav ul.gnb li:nth-of-type(4)").mouseenter(function(){ //mouseenter 대상영역안으로 마우스가 진입하는 행위
+                $("div.wbox div.wgnb:nth-of-type(4)").slideDown();    //slideDown() 펼쳐지면서 보여지게 해라 
+                $("div.wbox div.wgnb:nth-of-type(4)").siblings().hide();
+           });
+           $("div#subtitle").mouseenter(function(){
+                $("div.wbox div.wgnb:nth-of-type(4)").slideUp();
+           });
+        });
     </script>
 </head>
 <body>
@@ -106,65 +139,176 @@
                         <li>CHI</li>
                     </ul>
                 </div>
-                <div class="wgnb hide">
-                    <div class="center flex">
-                        <div class="wsub">
-                            <h2 class="hide">COMPANY</h2>
-                            <ul class="text-center">
-                                <li><a href="">회사개요</a></li>
-                                <li><a href="">CEO 인사말</a></li>
-                                <li><a href="">가치체계</a></li>
-                                <li><a href="">연구소</a></li>
-                                <li><a href="">관계사</a></li>
-                                <li><a href="">사업장</a></li>
-                            </ul>
+                <div class="wbox">
+                    <div class="wgnb">
+                        <div class="center flex">
+                            <div class="wsub">
+                                <h2 class="hide">COMPANY</h2>
+                                <ul class="text-center">
+                                    <li><a href="">인사말</a></li>
+                                    <li><a href="">경영철학</a></li>
+                                    <li><a href="">연혁</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">Introduction</h2>
+                                <ul class="text-center">
+                                    <li><a href="">CI</a></li>
+                                    <li><a href="">하이트진로 폰트</a></li>
+                                    <li><a href="">국제화</a></li>
+                                    <li><a href="">계열사안내</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">Investment</h2>
+                                <ul class="text-center">
+                                    <li><a href="">IR정보</a></li>
+                                    <li><a href="">전자공고</a></li>
+                                    <li><a href="">공시</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">Location</h2>
+                                <ul class="text-center">
+                                    <li><a href="">본사</a></li>
+                                    <li><a href="">지점</a></li>
+                                    <li><a href="">공장</a></li>
+                                    <li><a href="">계열사</a></li>
+                                    <li><a href="">해외법인</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">Factory</h2>
+                                <ul class="text-center">
+                                    <li><a href="">공장소개</a></li>
+                                    <li><a href="">견학신청</a></li>
+                                    <li><a href="">신청상태</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">Recrui</h2>
+                                <ul class="text-center">
+                                    <li><a href="">인재상</a></li>
+                                    <li><a href="">직무소개</a></li>
+                                    <li><a href="">채용절차</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="wsub">
-                            <h2 class="hide">제품소개</h2>
-                            <ul class="text-center">
-                                <li><a href="">제품정보</a></li>
-                                <li><a href="">주정</a></li>
-                                <li><a href="">석유화학</a></li>
-                                <li><a href="">Color Paste</a></li>
-                                <li><a href="">제품문의</a></li>
-                            </ul>
+                    </div>
+                    <div class="wgnb">
+                        <div class="center flex">
+                            <div class="wsub">
+                                <h2 class="">Social board</h2>
+                                <ul class="text-center">
+                                    <li><a href="">당신의 인생을 더 큰 즐거움과 에너지로
+                                        채우는 하이트진로의 다양한 소셜채널을
+                                        지금 바로 확인해 보세요!</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">Media</h2>
+                                <ul class="text-center">
+                                    <li><a href="">공지사항</a></li>
+                                    <li><a href="">보도자료</a></li>
+                                    <li><a href="">광고 자료관</a></li>
+                                    <li><a href="">제품 자료관</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">마케팅 성공사례</h2>
+                                <ul class="text-center">
+                                    <li><a href="">하이트 성공사례</a></li>
+                                    <li><a href="">참이슬 성공신화</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="wsub">
-                            <h2 class="hide">지속가능경영</h2>
-                            <ul class="text-center">
-                                <li><a href="">정도경영</a></li>
-                                <li><a href="">환경경영</a></li>
-                                <li><a href="">품질경영</a></li>
-                            </ul>
+                    </div>
+                    <div class="wgnb">
+                        <div class="center flex">
+                            <div class="wsub">
+                                <h2 class="">지속가능환경경영</h2>
+                                <ul class="text-center">
+                                    <li><a href="">Introduction</a></li>
+                                    <li><a href="">2050 to zerO!</a></li>
+                                    <li><a href="">CSV</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">식품안전경영</h2>
+                                <ul class="text-center">
+                                    <li><a href="">경영방침</a></li>
+                                    <li><a href="">인증현황</a></li>
+                                    <li><a href="">Q-UP System</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">안전보건경영</h2>
+                                <ul class="text-center">
+                                    <li><a href="">경영방침 및 추진과제</a></li>
+                                    <li><a href="">인증현황</a></li>
+                                    <li><a href="">안전보건활동 현황</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">CSR</h2>
+                                <ul class="text-center">
+                                    <li><a href="">&Joy</a></li>
+                                    <li><a href="">분야별 사회공헌</a></li>
+                                    <li><a href="">공장</a></li>
+                                    <li><a href="">꿈 바우처</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">Ethical Management</h2>
+                                <ul class="text-center">
+                                    <li><a href="">동반성장</a></li>
+                                    <li><a href="">청음고(부정제보)</a></li>
+                                    <li><a href="">공정거래자율준수</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">기업지배구조</h2>
+                                <ul class="text-center">
+                                    <li><a href="">이사회 현황</a></li>
+                                    <li><a href="">이사회 내 위원회 현황</a></li>
+                                    <li><a href="">정기 주주총회</a></li>
+                                    <li><a href="">의결권 행사 현황</a></li>
+                                    <li><a href="">ESG 평가 등급</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="wsub">
-                            <h2 class="hide">투자정보</h2>
-                            <ul class="text-center">
-                                <li><a href="">경영정보</a></li>
-                                <li><a href="">주가정보</a></li>
-                                <li><a href="">재무정보</a></li>
-                                <li><a href="">IR자료실</a></li>
-                            </ul>
-                        </div>
-                        <div class="wsub">
-                            <h2 class="hide">홍보센터</h2>
-                            <ul class="text-center">
-                                <li><a href="">KAI소식</a></li>
-                                <li><a href="">CI소개</a></li>
-                                <li><a href="">사회공헌</a></li>
-                            </ul>
-                        </div>
-                        <div class="wsub">
-                            <h2 class="hide">인재채용</h2>
-                            <ul class="text-center">
-                                <li><a href="">인사제도</a></li>
-                                <li><a href="">채용공고</a></li>
-                                <li><a href="">채용문의</a></li>
-                            </ul>
+                    </div>
+                    <div class="wgnb">
+                        <div class="center flex">
+                            <div class="wsub">
+                                <h2 class="hide">FAQ</h2>
+                                <ul class="text-center">
+                                    <li><a href="">FAQ</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="hide">Q&A</h2>
+                                <ul class="text-center">
+                                    <li><a href="">Q&A</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="">주류상식 가이드</h2>
+                                <ul class="text-center">
+                                    <li><a href="">맥주 가이드</a></li>
+                                    <li><a href="">소주 가이드</a></li>
+                                </ul>
+                            </div>
+                            <div class="wsub">
+                                <h2 class="hide">기타</h2>
+                                <ul class="text-center">
+                                    <li><a href="">기타</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <a href="" class="ham">전체메뉴</a>
+            </div>
             </nav>
         </div>
    </header>
@@ -187,11 +331,6 @@
    <main>
         <section id="product">
             <div class="wrap paddingB100">
-                <ol class="breadcrumb">
-                    <li><a href="">home</a></li>
-                    <li><a href="">회사소개</a></li>
-                    <li><a href="">인사말</a></li>
-                </ol>
                 <h2 class="h3">사용자들이 가장 많이 찾으신 컨텐츠를 소개합니다___</h2>
                 <ul class="list">
                     <li>
